alignment fix

--- a/src/styles/web/themes/macros.styl
+++ b/src/styles/web/themes/macros.styl
@@ -14,6 +14,7 @@ progressButton(assetFile, backgroundColor, barColor = #61FFFF, buttonOuter = 66p
     left @top
     width buttonInner
     height @width
+    background-position center
     background-color backgroundColor
     border-radius @width
 
